Try to get the test working on Hudson.
git-svn-id: https://svn.win.tue.nl/repos/prom/Packages/ProM-Framework/Trunk@30269 a68f48d4-8d00-424f-b812-3f22a534a02a